Preventing wrapped text from running into the next column

--- a/scss/modules/_datatables.scss
+++ b/scss/modules/_datatables.scss
@@ -158,6 +158,7 @@
 .data-table--wrapped {
   td {
     white-space: pre-wrap;
+    text-overflow: ellipsis;
     overflow: visible;
   }
 }
